# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../web_aafwk.gni")

#################################################
config("ohos_glue_config") {
  defines = [ "OHOS_WEBVIEW_GLUE" ]

  include_dirs = [ "../ohos_glue" ]
}

ohos_shared_library("ohos_base_glue_source") {
  branch_protector_ret = "pac_ret"
  branch_protector_frt = "bti"

  if (target_cpu == "arm64") {
    defines = [ "webview_arm64" ]
  } else if (target_cpu == "arm") {
    defines = [ "webview_arm" ]
  } else if (target_cpu == "x86_64") {
    defines = [ "webview_x86_64" ]
  }

  deps = [ "${webview_path}:webview_prepare" ]

  configs = [ ":ohos_glue_config" ]
  include_dirs = [ "../ohos_nweb" ]
  sources = [
    "base/bridge/ark_web_bridge_helper.cpp",
    "base/bridge/ark_web_bridge_helper.h",
    "base/include/ark_web_errno.cpp",
    "base/include/ark_web_errno.h",
    "base/include/ark_web_memory.cpp",
    "base/include/ark_web_memory.h",
    "base/include/ark_web_types.cpp",
    "base/include/ark_web_types.h",
  ]

  external_deps = [ "hilog:libhilog" ]
  part_name = "webview"
  subsystem_name = "web"
}

ohos_shared_library("ohos_nweb_glue_source") {
  branch_protector_ret = "pac_ret"
  branch_protector_frt = "bti"

  configs = [ ":ohos_glue_config" ]

  include_dirs = [ "../ohos_nweb" ]

  sources = [
    "ohos_nweb/bridge/ark_web_access_request_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_access_request_wrapper.h",
    "ohos_nweb/bridge/ark_web_accessibility_event_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_accessibility_event_callback_impl.h",
    "ohos_nweb/bridge/ark_web_accessibility_node_info_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_accessibility_node_info_wrapper.h",
    "ohos_nweb/bridge/ark_web_app_link_callback_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_app_link_callback_wrapper.h",
    "ohos_nweb/bridge/ark_web_bool_value_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_bool_value_callback_impl.h",
    "ohos_nweb/bridge/ark_web_cache_options_impl.cpp",
    "ohos_nweb/bridge/ark_web_cache_options_impl.h",
    "ohos_nweb/bridge/ark_web_console_log_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_console_log_wrapper.h",
    "ohos_nweb/bridge/ark_web_context_menu_callback_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_context_menu_callback_wrapper.h",
    "ohos_nweb/bridge/ark_web_context_menu_params_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_context_menu_params_wrapper.h",
    "ohos_nweb/bridge/ark_web_controller_handler_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_controller_handler_wrapper.h",
    "ohos_nweb/bridge/ark_web_cookie_manager_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_cookie_manager_wrapper.h",
    "ohos_nweb/bridge/ark_web_create_native_media_player_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_create_native_media_player_callback_impl.h",
    "ohos_nweb/bridge/ark_web_cursor_info_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_cursor_info_wrapper.h",
    "ohos_nweb/bridge/ark_web_data_base_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_data_base_wrapper.h",
    "ohos_nweb/bridge/ark_web_data_resubmission_callback_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_data_resubmission_callback_wrapper.h",
    "ohos_nweb/bridge/ark_web_date_time_chooser_callback_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_date_time_chooser_callback_wrapper.h",
    "ohos_nweb/bridge/ark_web_date_time_chooser_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_date_time_chooser_wrapper.h",
    "ohos_nweb/bridge/ark_web_date_time_suggestion_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_date_time_suggestion_wrapper.h",
    "ohos_nweb/bridge/ark_web_doh_config_impl.cpp",
    "ohos_nweb/bridge/ark_web_doh_config_impl.h",
    "ohos_nweb/bridge/ark_web_download_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_download_callback_impl.h",
    "ohos_nweb/bridge/ark_web_download_manager_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_download_manager_wrapper.h",
    "ohos_nweb/bridge/ark_web_drag_data_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_drag_data_wrapper.h",
    "ohos_nweb/bridge/ark_web_drag_event_impl.cpp",
    "ohos_nweb/bridge/ark_web_drag_event_impl.h",
    "ohos_nweb/bridge/ark_web_engine_init_args_impl.cpp",
    "ohos_nweb/bridge/ark_web_engine_init_args_impl.h",
    "ohos_nweb/bridge/ark_web_engine_prefetch_args_impl.cpp",
    "ohos_nweb/bridge/ark_web_engine_prefetch_args_impl.h",
    "ohos_nweb/bridge/ark_web_engine_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_engine_wrapper.h",
    "ohos_nweb/bridge/ark_web_file_selector_params_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_file_selector_params_wrapper.h",
    "ohos_nweb/bridge/ark_web_find_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_find_callback_impl.h",
    "ohos_nweb/bridge/ark_web_first_meaningful_paint_details_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_first_meaningful_paint_details_wrapper.h",
    "ohos_nweb/bridge/ark_web_full_screen_exit_handler_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_full_screen_exit_handler_wrapper.h",
    "ohos_nweb/bridge/ark_web_geo_location_callback_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_geo_location_callback_wrapper.h",
    "ohos_nweb/bridge/ark_web_gesture_event_result_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_gesture_event_result_wrapper.h",
    "ohos_nweb/bridge/ark_web_handler_impl.cpp",
    "ohos_nweb/bridge/ark_web_handler_impl.h",
    "ohos_nweb/bridge/ark_web_history_item_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_history_item_wrapper.h",
    "ohos_nweb/bridge/ark_web_history_list_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_history_list_wrapper.h",
    "ohos_nweb/bridge/ark_web_hit_test_result_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_hit_test_result_wrapper.h",
    "ohos_nweb/bridge/ark_web_image_options_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_image_options_wrapper.h",
    "ohos_nweb/bridge/ark_web_js_all_ssl_error_result_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_js_all_ssl_error_result_wrapper.h",
    "ohos_nweb/bridge/ark_web_js_dialog_result_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_js_dialog_result_wrapper.h",
    "ohos_nweb/bridge/ark_web_js_http_auth_result_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_js_http_auth_result_wrapper.h",
    "ohos_nweb/bridge/ark_web_js_proxy_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_js_proxy_callback_impl.h",
    "ohos_nweb/bridge/ark_web_js_result_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_js_result_callback_impl.h",
    "ohos_nweb/bridge/ark_web_js_ssl_error_result_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_js_ssl_error_result_wrapper.h",
    "ohos_nweb/bridge/ark_web_js_ssl_select_cert_result_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_js_ssl_select_cert_result_wrapper.h",
    "ohos_nweb/bridge/ark_web_key_event_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_key_event_wrapper.h",
    "ohos_nweb/bridge/ark_web_largest_contentful_paint_details_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_largest_contentful_paint_details_wrapper.h",
    "ohos_nweb/bridge/ark_web_load_committed_details_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_load_committed_details_wrapper.h",
    "ohos_nweb/bridge/ark_web_long_value_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_long_value_callback_impl.h",
    "ohos_nweb/bridge/ark_web_media_info_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_media_info_wrapper.h",
    "ohos_nweb/bridge/ark_web_media_source_info_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_media_source_info_wrapper.h",
    "ohos_nweb/bridge/ark_web_message_value_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_message_value_callback_impl.h",
    "ohos_nweb/bridge/ark_web_native_embed_data_info_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_native_embed_data_info_wrapper.h",
    "ohos_nweb/bridge/ark_web_native_embed_info_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_native_embed_info_wrapper.h",
    "ohos_nweb/bridge/ark_web_native_embed_touch_event_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_native_embed_touch_event_wrapper.h",
    "ohos_nweb/bridge/ark_web_native_media_player_bridge_impl.cpp",
    "ohos_nweb/bridge/ark_web_native_media_player_bridge_impl.h",
    "ohos_nweb/bridge/ark_web_native_media_player_handler_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_native_media_player_handler_wrapper.h",
    "ohos_nweb/bridge/ark_web_native_media_player_surface_info_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_native_media_player_surface_info_wrapper.h",
    "ohos_nweb/bridge/ark_web_nweb_bridge_helper.cpp",
    "ohos_nweb/bridge/ark_web_nweb_bridge_helper.h",
    "ohos_nweb/bridge/ark_web_nweb_create_info_impl.cpp",
    "ohos_nweb/bridge/ark_web_nweb_create_info_impl.h",
    "ohos_nweb/bridge/ark_web_nweb_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_nweb_wrapper.h",
    "ohos_nweb/bridge/ark_web_output_frame_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_output_frame_callback_impl.h",
    "ohos_nweb/bridge/ark_web_preference_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_preference_wrapper.h",
    "ohos_nweb/bridge/ark_web_quick_menu_callback_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_quick_menu_callback_wrapper.h",
    "ohos_nweb/bridge/ark_web_quick_menu_params_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_quick_menu_params_wrapper.h",
    "ohos_nweb/bridge/ark_web_release_surface_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_release_surface_callback_impl.h",
    "ohos_nweb/bridge/ark_web_resource_ready_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_resource_ready_callback_impl.h",
    "ohos_nweb/bridge/ark_web_screen_capture_access_request_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_screen_capture_access_request_wrapper.h",
    "ohos_nweb/bridge/ark_web_screen_capture_config_impl.cpp",
    "ohos_nweb/bridge/ark_web_screen_capture_config_impl.h",
    "ohos_nweb/bridge/ark_web_screen_lock_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_screen_lock_callback_impl.h",
    "ohos_nweb/bridge/ark_web_select_menu_bound_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_select_menu_bound_wrapper.h",
    "ohos_nweb/bridge/ark_web_select_popup_menu_callback_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_select_popup_menu_callback_wrapper.h",
    "ohos_nweb/bridge/ark_web_select_popup_menu_item_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_select_popup_menu_item_wrapper.h",
    "ohos_nweb/bridge/ark_web_select_popup_menu_param_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_select_popup_menu_param_wrapper.h",
    "ohos_nweb/bridge/ark_web_string_value_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_string_value_callback_impl.h",
    "ohos_nweb/bridge/ark_web_string_vector_value_callback_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_string_vector_value_callback_wrapper.h",
    "ohos_nweb/bridge/ark_web_touch_handle_hot_zone_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_touch_handle_hot_zone_wrapper.h",
    "ohos_nweb/bridge/ark_web_touch_handle_state_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_touch_handle_state_wrapper.h",
    "ohos_nweb/bridge/ark_web_touch_point_info_impl.cpp",
    "ohos_nweb/bridge/ark_web_touch_point_info_impl.h",
    "ohos_nweb/bridge/ark_web_url_resource_error_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_url_resource_error_wrapper.h",
    "ohos_nweb/bridge/ark_web_url_resource_request_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_url_resource_request_wrapper.h",
    "ohos_nweb/bridge/ark_web_url_resource_response_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_url_resource_response_wrapper.h",
    "ohos_nweb/bridge/ark_web_view_struct_utils.cpp",
    "ohos_nweb/bridge/ark_web_view_struct_utils.h",
    "ohos_nweb/bridge/ark_web_web_storage_origin_vector_value_callback_impl.cpp",
    "ohos_nweb/bridge/ark_web_web_storage_origin_vector_value_callback_impl.h",
    "ohos_nweb/bridge/ark_web_web_storage_origin_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_web_storage_origin_wrapper.h",
    "ohos_nweb/bridge/ark_web_web_storage_wrapper.cpp",
    "ohos_nweb/bridge/ark_web_web_storage_wrapper.h",
    "ohos_nweb/cpptoc/ark_web_accessibility_event_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_accessibility_event_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_bool_value_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_bool_value_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_cache_options_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_cache_options_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_create_native_media_player_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_create_native_media_player_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_doh_config_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_doh_config_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_download_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_download_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_drag_event_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_drag_event_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_engine_init_args_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_engine_init_args_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_engine_prefetch_args_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_engine_prefetch_args_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_find_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_find_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_handler_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_handler_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_js_proxy_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_js_proxy_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_js_proxy_callback_vector_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_js_proxy_callback_vector_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_js_result_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_js_result_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_long_value_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_long_value_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_message_value_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_message_value_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_native_media_player_bridge_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_native_media_player_bridge_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_nweb_create_info_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_nweb_create_info_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_output_frame_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_output_frame_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_release_surface_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_release_surface_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_resource_ready_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_resource_ready_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_screen_capture_config_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_screen_capture_config_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_screen_lock_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_screen_lock_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_string_value_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_string_value_callback_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_touch_point_info_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_touch_point_info_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_touch_point_info_vector_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_touch_point_info_vector_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_value_vector_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_value_vector_cpptoc.h",
    "ohos_nweb/cpptoc/ark_web_web_storage_origin_vector_value_callback_cpptoc.cpp",
    "ohos_nweb/cpptoc/ark_web_web_storage_origin_vector_value_callback_cpptoc.h",
    "ohos_nweb/ctocpp/ark_web_access_request_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_access_request_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_accessibility_node_info_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_accessibility_node_info_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_app_link_callback_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_app_link_callback_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_console_log_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_console_log_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_context_menu_callback_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_context_menu_callback_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_context_menu_params_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_context_menu_params_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_controller_handler_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_controller_handler_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_cookie_manager_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_cookie_manager_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_cursor_info_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_cursor_info_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_data_base_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_data_base_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_data_resubmission_callback_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_data_resubmission_callback_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_date_time_chooser_callback_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_date_time_chooser_callback_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_date_time_chooser_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_date_time_chooser_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_date_time_suggestion_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_date_time_suggestion_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_date_time_suggestion_vector_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_date_time_suggestion_vector_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_download_manager_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_download_manager_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_drag_data_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_drag_data_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_engine_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_engine_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_file_selector_params_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_file_selector_params_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_first_meaningful_paint_details_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_first_meaningful_paint_details_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_full_screen_exit_handler_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_full_screen_exit_handler_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_geo_location_callback_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_geo_location_callback_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_gesture_event_result_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_gesture_event_result_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_history_item_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_history_item_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_history_list_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_history_list_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_hit_test_result_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_hit_test_result_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_image_options_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_image_options_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_js_all_ssl_error_result_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_js_all_ssl_error_result_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_js_dialog_result_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_js_dialog_result_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_js_http_auth_result_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_js_http_auth_result_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_js_ssl_error_result_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_js_ssl_error_result_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_js_ssl_select_cert_result_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_js_ssl_select_cert_result_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_key_event_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_key_event_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_largest_contentful_paint_details_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_largest_contentful_paint_details_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_load_committed_details_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_load_committed_details_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_media_info_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_media_info_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_media_source_info_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_media_source_info_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_media_source_info_vector_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_media_source_info_vector_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_native_embed_data_info_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_native_embed_data_info_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_native_embed_info_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_native_embed_info_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_native_embed_touch_event_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_native_embed_touch_event_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_native_media_player_handler_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_native_media_player_handler_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_native_media_player_surface_info_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_native_media_player_surface_info_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_nweb_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_nweb_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_preference_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_preference_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_quick_menu_callback_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_quick_menu_callback_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_quick_menu_params_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_quick_menu_params_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_screen_capture_access_request_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_screen_capture_access_request_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_select_menu_bound_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_select_menu_bound_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_select_popup_menu_callback_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_select_popup_menu_callback_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_select_popup_menu_item_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_select_popup_menu_item_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_select_popup_menu_item_vector_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_select_popup_menu_item_vector_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_select_popup_menu_param_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_select_popup_menu_param_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_string_vector_value_callback_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_string_vector_value_callback_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_touch_handle_hot_zone_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_touch_handle_hot_zone_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_touch_handle_state_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_touch_handle_state_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_url_resource_error_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_url_resource_error_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_url_resource_request_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_url_resource_request_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_url_resource_response_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_url_resource_response_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_value_vector_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_value_vector_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_web_storage_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_web_storage_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_web_storage_origin_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_web_storage_origin_ctocpp.h",
    "ohos_nweb/ctocpp/ark_web_web_storage_origin_vector_ctocpp.cpp",
    "ohos_nweb/ctocpp/ark_web_web_storage_origin_vector_ctocpp.h",
  ]

  deps = [ ":ohos_base_glue_source" ]

  external_deps = [ "hilog:libhilog" ]

  part_name = "webview"
  subsystem_name = "web"
}
