# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../web_aafwk.gni")

ohos_shared_library("nweb_ohos_wrapper") {
  sources = [ "src/nweb_location_wrapper.cpp" ]

  cflags = [
    "-Wall",
    "-Werror",
  ]

  include_dirs = [ "../ohos_nweb/include" ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "location:locator_sdk",
  ]

  deps =
      [ "$location_path/frameworks/location_common/common:lbsservice_common" ]

  part_name = "webview"
  subsystem_name = "web"
}
