# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("web_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "common",
    "webasynccontroller",
    "webcookiemanager",
    "webdatabase",
    "webfunction",
    "webstorage",
    "webviewcontroller",
  ]
}

ohos_shared_library("webview_napi") {
  public_configs = [ ":web_public_config" ]

  sources = [
    "common/business_error.cpp",
    "common/napi_parse_utils.cpp",
    "common/napi_webview_native_module.cpp",
    "common/web_errors.cpp",
    "webasynccontroller/napi_web_async_controller.cpp",
    "webcookiemanager/napi_web_cookie_manager.cpp",
    "webdatabase/napi_geolocation_permission.cpp",
    "webdatabase/napi_web_data_base.cpp",
    "webfunction/napi_webview_function.cpp",
    "webfunction/webview_web_inited_callback.cpp",
    "webstorage/napi_web_storage.cpp",
    "webviewcontroller/napi_webview_controller.cpp",
    "webviewcontroller/webview_controller.cpp",
    "webviewcontroller/webview_hasimage_callback.cpp",
    "webviewcontroller/webview_javascript_execute_callback.cpp",
    "webviewcontroller/webview_javascript_result_callback.cpp",
  ]

  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "hilog:libhilog",
    "image_framework:image",
    "image_framework:image_native",
    "napi:ace_napi",
  ]

  deps = [
    "../../../ohos_adapter:nweb_ohos_adapter",
    "../../../ohos_nweb:libnweb",
    "js:js_export",
  ]

  relative_install_dir = "module/web"

  part_name = "webview"
  subsystem_name = "web"
}
