# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//base/web/webview/web_aafwk.gni")
import("//build/config/features.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("OnTouchPressFuzzTest") {
  module_out_path = webview_fuzz_test_path
  fuzz_config_file = "$webview_path/test/fuzztest/ontouchpress_fuzzer"
  include_dirs = [
    "$webview_path/test/ohos_nweb",
    "$window_manager_path/interfaces/innerkits/wm",
    "$webview_path/test/unittest/common",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "../../unittest/common/nweb_create_window.cpp",
    "ontouchpress_fuzzer.cpp",
  ]
  deps = [ "$graphic2d_path/rosen/modules/render_service_client:librender_service_client" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "webview:libnweb",
    "window_manager:libwm",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":OnTouchPressFuzzTest",
  ]
}
###############################################################################
