# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "web/webview"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [ "../../../ohos_adapter/display_manager_adapter/include" ]
}

ohos_unittest("display_manager_adapter_impl_test") {
  module_out_path = module_output_path

  sources = [ "display_manager_adapter_impl_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "../../../ohos_adapter:nweb_ohos_adapter",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
    "//third_party/zlib:libz",
  ]
  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:app_context",
    "ability_runtime:app_manager",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "battery_manager:batterysrv_client",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "cellular_data:tel_cellular_data_api",
    "common_event_service:cesfwk_innerkits",
    "core_service:tel_core_service_api",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "image_framework:image_native",
    "init:libbegetutil",
    "ipc:ipc_core",
    "netmanager_base:net_conn_manager_if",
    "pasteboard:pasteboard_client",
    "power_manager:powermgr_client",
    "relational_store:native_rdb",
    "webview:libnweb",
    "window_manager:libdm",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":display_manager_adapter_impl_test" ]
}
