# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
 
import("//build/test.gni")
import("../../../web_aafwk.gni")
 
module_output_path = "webview/webview"
 
ohos_unittest("web_scheme_handler_request_impl_test") {
  module_out_path = module_output_path
 
  sources = [
    "web_scheme_handler_request_impl_test.cpp"
  ]
 
  include_dirs = [
    "../common",
    "../../../interfaces/kits/cj/include",
  ]
 
  deps = [
    "$webview_path/interfaces/kits/cj:cj_webview_ffi",
    "$webview_path/interfaces/native:ohweb",
    "$webview_path/ohos_nweb:libnweb",
  ]
 
  external_deps = [
    "ability_runtime:app_context",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]
}
 
ohos_unittest("webview_scheme_ffi_impl_test") {
  module_out_path = module_output_path
 
  sources = [
    "webview_scheme_ffi_impl_test.cpp"
  ]
 
  include_dirs = [
    "../common",
    "../../../interfaces/kits/cj/include",
  ]
 
  deps = [
    "$webview_path/interfaces/kits/cj:cj_webview_ffi",
  ]
 
  external_deps = [
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]
}
 
group("unittest") {
  testonly = true
  deps = [
    ":web_scheme_handler_request_impl_test",
    ":webview_scheme_ffi_impl_test",
  ]
}